--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.oracle</groupId>
+			<groupId>com.github.noraui</groupId>
 			<artifactId>ojdbc7</artifactId>
-			<version>11.2.0</version>
+			<version>12.1.0.2</version>
 		</dependency>
 
 		<dependency>
