--- a/pom.xml
+++ b/pom.xml
@@ -39,12 +39,13 @@
 			<version>0.9.0</version>
 		</dependency>
 
+<!--
 		<dependency>
-			<groupId>com.github.noraui</groupId>
+			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc7</artifactId>
-			<version>12.1.0.2</version>
+			<version>11.2.0</version>
 		</dependency>
-
+-->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
