--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,3 +14,9 @@ artifacts:
   files:
     - revature_book_store_v4-0.0.1-SNAPSHOT.war
     - .ebextensions/**/*
+eb_codebuild_settings:
+  CodeBuildServiceRole: AWS-CodePipeline-Service
+  ComputeType: BUILD_GENERAL1_SMALL
+  Image: aws/codebuild/java:openjdk-8
+  Timeout: 60
+  base-directory: 'target'
